--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -89,3 +89,8 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+  assets:
+    - assets/apple-and-book-png-transparent-apple-and-book-images-274565.png
+    - assets/png/
+    - assets/lottie/
+    - assets/translations/
